[package]
name = "ipvs"
version = "0.0.1"
edition = "2021"
authors = ["David <davidventura27@gmail.com>"]
homepage = "https://github.com/davidventura/netlink-packet-ipvs"
repository = "https://github.com/davidventura/netlink-packet-ipvs"
keywords = ["netlink", "linux", "ipvs"]
description = "high level crate to talk to IPVS over netlink"
license = "MIT"

[dependencies]
netlink-packet-ipvs = "0.0.1"
netlink-packet-generic = "0.3.3"
netlink-packet-core = { version = "0.7.0" }
netlink-packet-utils = { version = "0.5.2" }
netlink-sys = { version = "0.8.3" }
